# gle-code

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: datasets.py
data/gsc/: __init__.py  get_data.py  tf1_gsc_splitter.py
experiments/gsc/: gsc_mel_gle.py  gsc_training.py
experiments/mimic/: lagline.py
experiments/mnist1d/: mnist1d_training.py  networks.py  plastic_e2e.py  static_lagnet.py
lib/: abstract_net.py  layers.py  memory.py  utils.py  visualization.py
lib/gle/: abstract_net.py  dynamics.py
plotting/: fig_lagline.py  fig_lagnet.py  fig_largescale.py
results/: happy_mel.npy  happy_mfcc.npy  happy_waveform.npy
results/gsc/: GLE_113_val_acc.csv  GLE_114_val_acc.csv  GLE_115_val_acc.csv  GLE_12_val_acc.csv  GLE_1_val_acc.csv  GLE_2_val_acc.csv  GLE_3_val_acc.csv  GLE_5_val_acc.csv  GLE_7_val_acc.csv  GLE_8_val_acc.csv
results/lagnet/: lagnet.py
results/mnist1d/: 42k_plastic_e2e_12_metrics.pkl  42k_plastic_e2e_32_metrics.pkl  42k_plastic_e2e_34_metrics.pkl  42k_plastic_e2e_42_metrics.pkl  42k_plastic_e2e_54_metrics.pkl  42k_plastic_e2e_56_metrics.pkl  42k_plastic_e2e_69_metrics.pkl  42k_plastic_e2e_76_metrics.pkl  42k_plastic_e2e_78_metrics.pkl  42k_plastic_e2e_98_metrics.pkl  plastic_e2e_12_metrics.pkl  plastic_e2e_32_metrics.pkl  plastic_e2e_34_metrics.pkl  plastic_e2e_42_metrics.pkl  plastic_e2e_54_metrics.pkl  plastic_e2e_56_metrics.pkl  plastic_e2e_69_metrics.pkl  plastic_e2e_76_metrics.pkl  plastic_e2e_78_metrics.pkl  plastic_e2e_98_metrics.pkl  static_lagnet_0_metrics.pkl  static_lagnet_1_metrics.pkl  (+8 more)
(+61 files in other folders)
